# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools/material_magic/java/org/realityforge/q3a/material_magic:material_format_test.bzl", "material_format_test")

cc_library(
    name = "ui",
    hdrs = ["ui/menudef.h"],
    includes = ["."],
    visibility = [
        "//code/cgame:__pkg__",
        "//code/game:__pkg__",
        "//code/ui:__pkg__",
    ],
)

filegroup(
    name = "ui_assets",
    srcs = [
        "ui/addfilter.menu",
        "ui/cinematicmenu.menu",
        "ui/connect.menu",
        "ui/controls.menu",
        "ui/createfavorite.menu",
        "ui/createserver.menu",
        "ui/credit.menu",
        "ui/default.menu",
        "ui/demo.menu",
        "ui/demo_quit.menu",
        "ui/endofgame.menu",
        "ui/error.menu",
        "ui/fight.menu",
        "ui/filter.menu",
        "ui/findplayer.menu",
        "ui/help.menu",
        "ui/hud.menu",
        "ui/hud.txt",
        "ui/hud2.txt",
        "ui/ingame.menu",
        "ui/ingame.txt",
        "ui/ingame_about.menu",
        "ui/ingame_addbot.menu",
        "ui/ingame_callvote.menu",
        "ui/ingame_controls.menu",
        "ui/ingame_join.menu",
        "ui/ingame_leave.menu",
        "ui/ingame_options.menu",
        "ui/ingame_orders.menu",
        "ui/ingame_player.menu",
        "ui/ingame_system.menu",
        "ui/ingame_vote.menu",
        "ui/joinserver.menu",
        "ui/main.menu",
        "ui/menudef.h",
        "ui/menus.txt",
        "ui/min_hud.menu",
        "ui/mod.menu",
        "ui/options.menu",
        "ui/ordershelp.menu",
        "ui/password.menu",
        "ui/player.menu",
        "ui/powerup.menu",
        "ui/quake3.menu",
        "ui/quit.menu",
        "ui/quitcredit.menu",
        "ui/resetscore.menu",
        "ui/score.menu",
        "ui/serverinfo.menu",
        "ui/setup.menu",
        "ui/skirmish.menu",
        "ui/system.menu",
        "ui/teamscore.menu",
        "ui/vid_restart.menu",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "skin_assets",
    srcs = [
        "models/flag2/blue.skin",
        "models/flag2/red.skin",
        "models/flag2/white.skin",
        "models/players/fritzkrieg/head_default.skin",
        "models/players/fritzkrieg/lower_default.skin",
        "models/players/fritzkrieg/upper_default.skin",
        "models/players/heads/callisto/head_blue.skin",
        "models/players/heads/callisto/head_default.skin",
        "models/players/heads/callisto/head_red.skin",
        "models/players/heads/flayer/head_blue.skin",
        "models/players/heads/flayer/head_default.skin",
        "models/players/heads/flayer/head_red.skin",
        "models/players/heads/gammy/head_blue.skin",
        "models/players/heads/gammy/head_default.skin",
        "models/players/heads/gammy/head_red.skin",
        "models/players/heads/gaunt/head_blue.skin",
        "models/players/heads/gaunt/head_default.skin",
        "models/players/heads/gaunt/head_red.skin",
        "models/players/heads/james/head_blue.skin",
        "models/players/heads/james/head_default.skin",
        "models/players/heads/james/head_red.skin",
        "models/players/heads/janet/head_blue.skin",
        "models/players/heads/janet/head_default.skin",
        "models/players/heads/janet/head_red.skin",
        "models/players/heads/khan/head_blue.skin",
        "models/players/heads/khan/head_default.skin",
        "models/players/heads/khan/head_red.skin",
        "models/players/heads/megan/head_blue.skin",
        "models/players/heads/megan/head_default.skin",
        "models/players/heads/megan/head_red.skin",
        "models/players/heads/morgan/head_blue.skin",
        "models/players/heads/morgan/head_default.skin",
        "models/players/heads/morgan/head_red.skin",
        "models/players/heads/neptune/head_blue.skin",
        "models/players/heads/neptune/head_default.skin",
        "models/players/heads/neptune/head_red.skin",
        "models/players/heads/ursula/head_blue.skin",
        "models/players/heads/ursula/head_default.skin",
        "models/players/heads/ursula/head_red.skin",
        "models/players/james/crusaders/lower_blue.skin",
        "models/players/james/crusaders/lower_default.skin",
        "models/players/james/crusaders/lower_red.skin",
        "models/players/james/crusaders/upper_blue.skin",
        "models/players/james/crusaders/upper_default.skin",
        "models/players/james/crusaders/upper_red.skin",
        "models/players/james/intruders/lower_blue.skin",
        "models/players/james/intruders/lower_default.skin",
        "models/players/james/intruders/lower_red.skin",
        "models/players/james/intruders/upper_blue.skin",
        "models/players/james/intruders/upper_default.skin",
        "models/players/james/intruders/upper_red.skin",
        "models/players/james/lower_default.skin",
        "models/players/james/pagans/lower_blue.skin",
        "models/players/james/pagans/lower_default.skin",
        "models/players/james/pagans/lower_red.skin",
        "models/players/james/pagans/upper_blue.skin",
        "models/players/james/pagans/upper_default.skin",
        "models/players/james/pagans/upper_red.skin",
        "models/players/james/stroggs/lower_blue.skin",
        "models/players/james/stroggs/lower_default.skin",
        "models/players/james/stroggs/lower_red.skin",
        "models/players/james/stroggs/upper_blue.skin",
        "models/players/james/stroggs/upper_default.skin",
        "models/players/james/stroggs/upper_red.skin",
        "models/players/james/the fallen/lower_blue.skin",
        "models/players/james/the fallen/lower_default.skin",
        "models/players/james/the fallen/lower_red.skin",
        "models/players/james/the fallen/upper_blue.skin",
        "models/players/james/the fallen/upper_default.skin",
        "models/players/james/the fallen/upper_red.skin",
        "models/players/james/upper_default.skin",
        "models/players/janet/crusaders/lower_blue.skin",
        "models/players/janet/crusaders/lower_default.skin",
        "models/players/janet/crusaders/lower_red.skin",
        "models/players/janet/crusaders/upper_blue.skin",
        "models/players/janet/crusaders/upper_default.skin",
        "models/players/janet/crusaders/upper_red.skin",
        "models/players/janet/intruders/lower_blue.skin",
        "models/players/janet/intruders/lower_default.skin",
        "models/players/janet/intruders/lower_red.skin",
        "models/players/janet/intruders/upper_blue.skin",
        "models/players/janet/intruders/upper_default.skin",
        "models/players/janet/intruders/upper_red.skin",
        "models/players/janet/lower_default.skin",
        "models/players/janet/pagans/lower_blue.skin",
        "models/players/janet/pagans/lower_default.skin",
        "models/players/janet/pagans/lower_red.skin",
        "models/players/janet/pagans/upper_blue.skin",
        "models/players/janet/pagans/upper_default.skin",
        "models/players/janet/pagans/upper_red.skin",
        "models/players/janet/stroggs/lower_blue.skin",
        "models/players/janet/stroggs/lower_default.skin",
        "models/players/janet/stroggs/lower_red.skin",
        "models/players/janet/stroggs/upper_blue.skin",
        "models/players/janet/stroggs/upper_default.skin",
        "models/players/janet/stroggs/upper_red.skin",
        "models/players/janet/the fallen/lower_default.skin",
        "models/players/janet/the fallen/lower_red.skin",
        "models/players/janet/the fallen/upper_default.skin",
        "models/players/janet/the fallen/upper_red.skin",
        "models/players/janet/upper_default.skin",
        "models/players/pi/head_default.skin",
        "models/players/pi/lower_default.skin",
        "models/players/pi/upper_default.skin",
        "models/powerups/harvester/blue.skin",
        "models/powerups/harvester/red.skin",
    ],
    visibility = ["//visibility:public"],
)

MATERIALS = [
    "shaders/blur.shader",
    "shaders/centerconsole.shader",
    "shaders/centerconsole2.shader",
    "shaders/cin_logo.shader",
    "shaders/cinematicscreen.shader",
    "shaders/clanlogo.shader",
    "shaders/console.shader",
    "shaders/fight.shader",
    "shaders/hudalert.shader",
    "shaders/hudalert_blue.shader",
    "shaders/hudalert_good.shader",
    "shaders/hudalert_red.shader",
    "shaders/icons/ammo_regen.shader",
    "shaders/icons/doubler.shader",
    "shaders/icons/guard.shader",
    "shaders/icons/icona_chaingun.shader",
    "shaders/icons/icona_nailgun.shader",
    "shaders/icons/icona_proxlauncher.shader",
    "shaders/icons/iconw_chaingun.shader",
    "shaders/icons/iconw_nailgun.shader",
    "shaders/icons/iconw_proxlauncher.shader",
    "shaders/icons/invulnerability.shader",
    "shaders/icons/kamikaze.shader",
    "shaders/icons/portal.shader",
    "shaders/icons/radar.shader",
    "shaders/icons/scout.shader",
    "shaders/join_server.shader",
    "shaders/levelShotDetail.shader",
    "shaders/lightningkc.shader",
    "shaders/menu2back.shader",
    "shaders/menuback_a.shader",
    "shaders/menuback_b.shader",
    "shaders/menuback_c.shader",
    "shaders/menuback_d.shader",
    "shaders/menuback_e.shader",
    "shaders/menuback_e3.shader",
    "shaders/menuback_e4.shader",
    "shaders/menuback_f.shader",
    "shaders/menuback_g.shader",
    "shaders/menuflare.shader",
    "shaders/menuscreen.shader",
    "shaders/menuscreen2.shader",
    "shaders/models/flag/flagbits.shader",
    "shaders/models/flag/flagbits2.shader",
    "shaders/models/flag2/b_flag2.shader",
    "shaders/models/flag2/r_flag2.shader",
    "shaders/models/flag2/w_flag2.shader",
    "shaders/models/flags/n_flag2.shader",
    "shaders/models/flags/pole.shader",
    "shaders/models/mapobjects/flagbase/base_s.shader",
    "shaders/models/mapobjects/flagbase/beam_blue.shader",
    "shaders/models/mapobjects/flagbase/beam_ntrl.shader",
    "shaders/models/mapobjects/flagbase/beam_red.shader",
    "shaders/models/mapobjects/flagbase/env_blue.shader",
    "shaders/models/mapobjects/flagbase/env_ntrl.shader",
    "shaders/models/mapobjects/flagbase/env_red.shader",
    "shaders/models/mapobjects/flagbase/swirl_blue.shader",
    "shaders/models/mapobjects/flagbase/swirl_ntrl.shader",
    "shaders/models/mapobjects/flagbase/swirl_red.shader",
    "shaders/models/mapobjects/gratelamp/gratelight.shader",
    "shaders/models/mapobjects/gratelamp/gratelight_flare.shader",
    "shaders/models/mapobjects/gratelamp/lightbulb.shader",
    "shaders/models/mapobjects/horned/horned_blu.shader",
    "shaders/models/mapobjects/misc/bellcone.shader",
    "shaders/models/mapobjects/multiplant/bannanaleaf.shader",
    "shaders/models/mapobjects/multiplant/batleaf.shader",
    "shaders/models/mapobjects/multiplant/batleaf2.shader",
    "shaders/models/mapobjects/multiplant/fern.shader",
    "shaders/models/mapobjects/multiplant/invisible.shader",
    "shaders/models/mapobjects/multiplant/leaf1.shader",
    "shaders/models/mapobjects/multiplant/leaf2.shader",
    "shaders/models/mapobjects/multiplant/leaf3.shader",
    "shaders/models/mapobjects/multiplant/palmfrond.shader",
    "shaders/models/mapobjects/multiplant/pleaf1.shader",
    "shaders/models/mapobjects/multiplant/pleaf2.shader",
    "shaders/models/mapobjects/multiplant/pleaf3.shader",
    "shaders/models/mapobjects/nateleaf1/tree2.shader",
    "shaders/models/mapobjects/slamp/slamp3x.shader",
    "shaders/models/mapobjects/spawn/spawn3.shader",
    "shaders/models/mapobjects/spawn/spawn3_r.shader",
    "shaders/models/mapobjects/statues/flagbits_stat.shader",
    "shaders/models/mapobjects/techlamp/techlamp02lt.shader",
    "shaders/models/mapobjects/techlamp/techlamp02trn.shader",
    "shaders/models/mapobjects/techlamp/techlamp_pole.shader",
    "shaders/models/mapobjects/techlamp/techlamp_rail.shader",
    "shaders/models/mapobjects/techlamp/techlamp_rail2.shader",
    "shaders/models/mapobjects/techlamp/techlamp_rail2b.shader",
    "shaders/models/mapobjects/terrastone/magicstone01.shader",
    "shaders/models/mapobjects/terrastone/magicstone02.shader",
    "shaders/models/mapobjects/terrastone/magicstone03.shader",
    "shaders/models/mapobjects/terrastone/magicstone04.shader",
    "shaders/models/mapobjects/tree2/branch2.shader",
    "shaders/models/mapobjects/wallhead2/demonhead1.shader",
    "shaders/models/mapobjects/wallhead2/wallhead2_1.shader",
    "shaders/models/mapobjects/wallhead2/wallhead2_eye.shader",
    "shaders/models/mapobjects/wallhead2/wallhead2_h1.shader",
    "shaders/models/mapobjects/wallhead2/wallhead2_h2.shader",
    "shaders/models/mapobjects/wallhead2/wallhead2_h3.shader",
    "shaders/models/mapobjects/weeds2/weeds2.shader",
    "shaders/models/mapobjects/xlamp/xlamp.shader",
    "shaders/models/mapobjects/xlamp/xlamp_blue.shader",
    "shaders/models/mapobjects/xlamp/xlamp_grate.shader",
    "shaders/models/mapobjects/xlamp/xlamp_ntrl.shader",
    "shaders/models/mapobjects/xlamp/xlamp_red.shader",
    "shaders/models/players/fritzkrieg/beam.shader",
    "shaders/models/players/fritzkrieg/beam2.shader",
    "shaders/models/players/fritzkrieg/fritz_c.shader",
    "shaders/models/players/fritzkrieg/fritz_fx.shader",
    "shaders/models/players/heads/callisto/callisto.shader",
    "shaders/models/players/heads/flayer/flayer_t_blue.shader",
    "shaders/models/players/heads/flayer/flayer_t_red.shader",
    "shaders/models/players/heads/flayer/flayereye.shader",
    "shaders/models/players/heads/gammy/gammy2.shader",
    "shaders/models/players/heads/gammy/gammy3.shader",
    "shaders/models/players/heads/gammy/gammy_blu.shader",
    "shaders/models/players/heads/gammy/gammy_red.shader",
    "shaders/models/players/heads/gaunt/gaunt_e.shader",
    "shaders/models/players/heads/james/james_blu.shader",
    "shaders/models/players/heads/james/james_e_blu.shader",
    "shaders/models/players/heads/james/james_e_red.shader",
    "shaders/models/players/heads/james/james_red.shader",
    "shaders/models/players/heads/janet/janet_blu.shader",
    "shaders/models/players/heads/janet/janet_red.shader",
    "shaders/models/players/heads/khan/khan_f.shader",
    "shaders/models/players/heads/megan/megan1_blu.shader",
    "shaders/models/players/heads/megan/megan1_red.shader",
    "shaders/models/players/heads/megan/megan2.shader",
    "shaders/models/players/heads/megan/megan3.shader",
    "shaders/models/players/heads/morgan/morgan_blu.shader",
    "shaders/models/players/heads/morgan/morgan_red.shader",
    "shaders/models/players/heads/neptune/neptune2.shader",
    "shaders/models/players/heads/ursula/ursula_e.shader",
    "shaders/models/players/james/crusaders/crusaders_blu.shader",
    "shaders/models/players/james/crusaders/crusaders_h_blu.shader",
    "shaders/models/players/james/crusaders/crusaders_h_red.shader",
    "shaders/models/players/james/crusaders/crusaders_red.shader",
    "shaders/models/players/james/intruders/intruders_blu.shader",
    "shaders/models/players/james/intruders/intruders_h_blu.shader",
    "shaders/models/players/james/intruders/intruders_h_red.shader",
    "shaders/models/players/james/intruders/intruders_red.shader",
    "shaders/models/players/james/pagans/pagans_blu.shader",
    "shaders/models/players/james/pagans/pagans_e_blu.shader",
    "shaders/models/players/james/pagans/pagans_e_red.shader",
    "shaders/models/players/james/pagans/pagans_h_blu.shader",
    "shaders/models/players/james/pagans/pagans_h_red.shader",
    "shaders/models/players/james/pagans/pagans_red.shader",
    "shaders/models/players/james/stroggs/stroggs_blu.shader",
    "shaders/models/players/james/stroggs/stroggs_h_blu.shader",
    "shaders/models/players/james/stroggs/stroggs_h_red.shader",
    "shaders/models/players/james/stroggs/stroggs_red.shader",
    "shaders/models/players/james/thefallen/thefallen_blu.shader",
    "shaders/models/players/james/thefallen/thefallen_h_blu.shader",
    "shaders/models/players/james/thefallen/thefallen_h_red.shader",
    "shaders/models/players/james/thefallen/thefallen_red.shader",
    "shaders/models/players/janet/crusaders/crusaders_blu.shader",
    "shaders/models/players/janet/crusaders/crusaders_red.shader",
    "shaders/models/players/janet/intruders/intruders_blu.shader",
    "shaders/models/players/janet/intruders/intruders_red.shader",
    "shaders/models/players/janet/pagans/pagans_blu.shader",
    "shaders/models/players/janet/pagans/pagans_h_blu.shader",
    "shaders/models/players/janet/pagans/pagans_h_red.shader",
    "shaders/models/players/janet/pagans/pagans_red.shader",
    "shaders/models/players/janet/stroggs/stroggs_blu.shader",
    "shaders/models/players/janet/stroggs/stroggs_red.shader",
    "shaders/models/players/janet/thefallen/thefallen_blu.shader",
    "shaders/models/players/janet/thefallen/thefallen_red.shader",
    "shaders/models/players/meep/meep.shader",
    "shaders/models/players/meep/meep_f.shader",
    "shaders/models/players/meep/meep_g.shader",
    "shaders/models/players/meep/meep_h.shader",
    "shaders/models/players/meep/meep_w.shader",
    "shaders/models/players/pi/beam.shader",
    "shaders/models/players/pi/beam2.shader",
    "shaders/models/players/pi/bluendcap.shader",
    "shaders/models/players/pi/endcap.shader",
    "shaders/models/players/pi/gear01.shader",
    "shaders/models/players/pi/hair.shader",
    "shaders/models/players/pi/ntrl_t.shader",
    "shaders/models/players/pi/null.shader",
    "shaders/models/players/pi/pi.shader",
    "shaders/models/players/pi/pi_t.shader",
    "shaders/models/players/pi/pi_t2.shader",
    "shaders/models/players/pi/piston.shader",
    "shaders/models/players/pi/redendcap.shader",
    "shaders/models/players/xscout/scout2x.shader",
    "shaders/models/powerups/ammo/chaingammo.shader",
    "shaders/models/powerups/ammo/chaingammo2.shader",
    "shaders/models/powerups/ammo/nailgammo.shader",
    "shaders/models/powerups/ammo/nailgammo2.shader",
    "shaders/models/powerups/ammo/proxammo.shader",
    "shaders/models/powerups/ammo/proxammo2.shader",
    "shaders/models/powerups/ammo1.shader",
    "shaders/models/powerups/ammo2.shader",
    "shaders/models/powerups/doubler1.shader",
    "shaders/models/powerups/doubler2.shader",
    "shaders/models/powerups/guard1.shader",
    "shaders/models/powerups/guard2.shader",
    "shaders/models/powerups/harvester/blue_h.shader",
    "shaders/models/powerups/harvester/blue_h2.shader",
    "shaders/models/powerups/harvester/harvester2.shader",
    "shaders/models/powerups/harvester/red_h.shader",
    "shaders/models/powerups/kamikazi1.shader",
    "shaders/models/powerups/kamikazi2.shader",
    "shaders/models/powerups/kamikazi_f.shader",
    "shaders/models/powerups/kamitrail.shader",
    "shaders/models/powerups/ob2_1.shader",
    "shaders/models/powerups/ob2_2.shader",
    "shaders/models/powerups/ob2_3.shader",
    "shaders/models/powerups/ob2_4.shader",
    "shaders/models/powerups/ob2_energy.shader",
    "shaders/models/powerups/ob2_energy2.shader",
    "shaders/models/powerups/ob2_lightning1.shader",
    "shaders/models/powerups/ob2_lightning2.shader",
    "shaders/models/powerups/ob2_lightning3.shader",
    "shaders/models/powerups/ob2_target.shader",
    "shaders/models/powerups/obelisk/ob_cyl.shader",
    "shaders/models/powerups/obelisk/ob_flare.shader",
    "shaders/models/powerups/obelisk/ob_flare2.shader",
    "shaders/models/powerups/obelisk/ob_sft.shader",
    "shaders/models/powerups/obelisk/ob_trns.shader",
    "shaders/models/powerups/obelisk/ob_twirl.shader",
    "shaders/models/powerups/obelisk/ob_twirl2.shader",
    "shaders/models/powerups/orb/blue.shader",
    "shaders/models/powerups/orb/red.shader",
    "shaders/models/powerups/pop.shader",
    "shaders/models/powerups/pop2.shader",
    "shaders/models/powerups/porter1.shader",
    "shaders/models/powerups/porter2.shader",
    "shaders/models/powerups/regen1.shader",
    "shaders/models/powerups/scout1.shader",
    "shaders/models/powerups/scout2.shader",
    "shaders/models/powerups/shield/juicer.shader",
    "shaders/models/powerups/shield/shield.shader",
    "shaders/models/powerups/shield/shield2.shader",
    "shaders/models/powerups/shield_1.shader",
    "shaders/models/powerups/shield_2.shader",
    "shaders/models/powerups/shield_3.shader",
    "shaders/models/powerups/teleporter/tele_enter.shader",
    "shaders/models/powerups/teleporter/tele_enter2.shader",
    "shaders/models/powerups/teleporter/tele_exit.shader",
    "shaders/models/powerups/teleporter/tele_exit2.shader",
    "shaders/models/weaphits/kam01.shader",
    "shaders/models/weaphits/kam02.shader",
    "shaders/models/weaphits/kam03.shader",
    "shaders/models/weaphits/kam04.shader",
    "shaders/models/weaphits/kamik01.shader",
    "shaders/models/weaphits/kamikblu.shader",
    "shaders/models/weaphits/kamikred.shader",
    "shaders/models/weaphits/kamiwave01.shader",
    "shaders/models/weaphits/kamiwave02.shader",
    "shaders/models/weaphits/proxmine.shader",
    "shaders/models/weaphits/proxmine2.shader",
    "shaders/models/weaphits/proxmine2t.shader",
    "shaders/models/weaphits/proxminet.shader",
    "shaders/models/weaphits/rlboom/rlboom_1.shader",
    "shaders/models/weapons/nailgun/f_nailgun.shader",
    "shaders/models/weapons/nailgun/nail.shader",
    "shaders/models/weapons/nailgun/nail2.shader",
    "shaders/models/weapons/nailgun/nailgun.shader",
    "shaders/models/weapons/proxmine/f_proxmine.shader",
    "shaders/models/weapons/proxmine/proxmine.shader",
    "shaders/models/weapons/proxmine/proxmine1.shader",
    "shaders/models/weapons/proxmine/proxmine2.shader",
    "shaders/models/weapons/vulcan/f_vulcan.shader",
    "shaders/nailtrail.shader",
    "shaders/playerheads.shader",
    "shaders/playertitle.shader",
    "shaders/popback.shader",
    "shaders/ps_back1.shader",
    "shaders/ps_back2.shader",
    "shaders/screenwipe.shader",
    "shaders/setup.shader",
    "shaders/start_server.shader",
    "shaders/team_icon/crusaders_blue.shader",
    "shaders/team_icon/crusaders_red.shader",
    "shaders/team_icon/intruders_blue.shader",
    "shaders/team_icon/intruders_red.shader",
    "shaders/team_icon/pagans_blue.shader",
    "shaders/team_icon/pagans_red.shader",
    "shaders/team_icon/stroggs_blue.shader",
    "shaders/team_icon/stroggs_red.shader",
    "shaders/team_icon/the_fallen_blue.shader",
    "shaders/team_icon/the_fallen_red.shader",
    "shaders/textures/base_wall2/blue_arrow_small.shader",
    "shaders/textures/base_wall2/blue_circle.shader",
    "shaders/textures/base_wall2/blue_line.shader",
    "shaders/textures/base_wall2/blue_metal.shader",
    "shaders/textures/base_wall2/blue_red_stripe.shader",
    "shaders/textures/base_wall2/blue_solid.shader",
    "shaders/textures/base_wall2/blue_warning_light.shader",
    "shaders/textures/base_wall2/bluearrows.shader",
    "shaders/textures/base_wall2/cautionstripe.shader",
    "shaders/textures/base_wall2/double_line_blue.shader",
    "shaders/textures/base_wall2/double_line_red.shader",
    "shaders/textures/base_wall2/floorvent01_kc.shader",
    "shaders/textures/base_wall2/icon_pagans.shader",
    "shaders/textures/base_wall2/icon_stroggs.shader",
    "shaders/textures/base_wall2/jumppad_blue_kc.shader",
    "shaders/textures/base_wall2/jumppad_ntrl_kc.shader",
    "shaders/textures/base_wall2/jumppad_red_kc.shader",
    "shaders/textures/base_wall2/name_vortex.shader",
    "shaders/textures/base_wall2/ntrl_techfloor_kc.shader",
    "shaders/textures/base_wall2/red_arrow_small.shader",
    "shaders/textures/base_wall2/red_circle.shader",
    "shaders/textures/base_wall2/red_line.shader",
    "shaders/textures/base_wall2/red_metal.shader",
    "shaders/textures/base_wall2/red_solid.shader",
    "shaders/textures/base_wall2/redarrows.shader",
    "shaders/textures/base_wall2/redrust.shader",
    "shaders/textures/base_wall2/respawn_effect1.shader",
    "shaders/textures/base_wall2/respawn_effect1_blue.shader",
    "shaders/textures/base_wall2/respawn_effect1_ntrl.shader",
    "shaders/textures/base_wall2/runway_blue.shader",
    "shaders/textures/base_wall2/runway_red.shader",
    "shaders/textures/base_wall2/scuffs1.shader",
    "shaders/textures/base_wall2/space_concrete.shader",
    "shaders/textures/base_wall2/space_panel.shader",
    "shaders/textures/base_wall2/techfloor_kc.shader",
    "shaders/textures/base_wall2/techfloor_kc_blue.shader",
    "shaders/textures/base_wall2/yellow_arrow.shader",
    "shaders/textures/base_wall2/yellow_circle.shader",
    "shaders/textures/blueteam1.shader",
    "shaders/textures/common/pwclip.shader",
    "shaders/textures/common/terrain.shader",
    "shaders/textures/common/terrain2.shader",
    "shaders/textures/ctf/xctf_blueflag_noenv.shader",
    "shaders/textures/ctf/xctf_redflag_noenv.shader",
    "shaders/textures/ctf2/blue_banner01.shader",
    "shaders/textures/ctf2/blue_banner02.shader",
    "shaders/textures/ctf2/blue_pennant.shader",
    "shaders/textures/ctf2/blue_techsign01.shader",
    "shaders/textures/ctf2/blueteam01.shader",
    "shaders/textures/ctf2/blueteam02.shader",
    "shaders/textures/ctf2/blueteamscore.shader",
    "shaders/textures/ctf2/jaildr_bluescroll.shader",
    "shaders/textures/ctf2/pj_baseboardb.shader",
    "shaders/textures/ctf2/pj_baseboardr.shader",
    "shaders/textures/ctf2/red_banner02.shader",
    "shaders/textures/ctf2/redteam01.shader",
    "shaders/textures/ctf2/redteam02.shader",
    "shaders/textures/ctf2/redteamscore.shader",
    "shaders/textures/ctf2/test2_r_trans_vert.shader",
    "shaders/textures/ctf2/test2_trans_vert.shader",
    "shaders/textures/ctf2/tin_blupanel.shader",
    "shaders/textures/ctf2/tin_redpanel.shader",
    "shaders/textures/ctf2/xblueteam01.shader",
    "shaders/textures/ctf2/xredteam01x.shader",
    "shaders/textures/gallery/gallery_sky.shader",
    "shaders/textures/gothic_floor2/largerblock3bwet.shader",
    "shaders/textures/gothic_trim/pr3t.shader",
    "shaders/textures/jk_dm1/jk_bouncepad_floor1.shader",
    "shaders/textures/jk_dm1/jk_q3redflag.shader",
    "shaders/textures/jk_dm1/jk_t1fog_test.shader",
    "shaders/textures/jk_dm1/jk_toxicsky_dm1.shader",
    "shaders/textures/jk_dm1/jkt1_q3abanner.shader",
    "shaders/textures/jk_dm1/runway_dblue.shader",
    "shaders/textures/jk_tourney1/jk_bluemetal3b_trans.shader",
    "shaders/textures/jk_tourney1/jk_bouncepad_floor1.shader",
    "shaders/textures/jk_tourney1/jk_q3redflag.shader",
    "shaders/textures/jk_tourney1/jk_t1fog_test.shader",
    "shaders/textures/jk_tourney1/jk_toxicsky_dm1.shader",
    "shaders/textures/jk_tourney1/jkt1_q3abanner.shader",
    "shaders/textures/jk_tourney1/runway_dblue.shader",
    "shaders/textures/liquids/calm_pool_nolight.shader",
    "shaders/textures/liquids/calm_poollight2.shader",
    "shaders/textures/liquids/lavahell_2500_subd.shader",
    "shaders/textures/liquids/x_calm_pool_nolight.shader",
    "shaders/textures/liquids2/calm_poollight2nt.shader",
    "shaders/textures/liquids2/clear_calm1v.shader",
    "shaders/textures/liquids2/clear_ripple1_q3dm1v.shader",
    "shaders/textures/liquids2/clear_ripple1v.shader",
    "shaders/textures/liquids2/pjslime.shader",
    "shaders/textures/liquids2/slime3.shader",
    "shaders/textures/liquids2/water_volume.shader",
    "shaders/textures/liquids2/xproto_pool3.shader",
    "shaders/textures/maps/work_tri1/b0_0_0_0.shader",
    "shaders/textures/maps/work_tri1/b0_0_0_1.shader",
    "shaders/textures/maps/work_tri1/b0_0_0_2.shader",
    "shaders/textures/maps/work_tri1/b0_1_0_0.shader",
    "shaders/textures/maps/work_tri1/b0_1_0_2.shader",
    "shaders/textures/maps/work_tri1/b0_2_0_0.shader",
    "shaders/textures/maps/work_tri1/b0_2_0_1.shader",
    "shaders/textures/maps/work_tri1/b0_2_0_2.shader",
    "shaders/textures/maps/work_tri1/b1_0_0_1.shader",
    "shaders/textures/maps/work_tri1/b1_0_0_2.shader",
    "shaders/textures/maps/work_tri1/b1_1_0_2.shader",
    "shaders/textures/maps/work_tri1/b1_2_0_1.shader",
    "shaders/textures/maps/work_tri1/b1_2_0_2.shader",
    "shaders/textures/maps/work_tri1/b2_0_0_0.shader",
    "shaders/textures/maps/work_tri1/b2_0_0_1.shader",
    "shaders/textures/maps/work_tri1/b2_0_0_2.shader",
    "shaders/textures/maps/work_tri1/b2_1_0_0.shader",
    "shaders/textures/maps/work_tri1/b2_1_0_2.shader",
    "shaders/textures/maps/work_tri1/b2_2_0_0.shader",
    "shaders/textures/maps/work_tri1/b2_2_0_1.shader",
    "shaders/textures/maps/work_tri1/b2_2_0_2.shader",
    "shaders/textures/natestah/leaf2.shader",
    "shaders/textures/natestah/nateswater.shader",
    "shaders/textures/natestah/nateweb.shader",
    "shaders/textures/proto2/5_dcl.shader",
    "shaders/textures/proto2/barbedwire.shader",
    "shaders/textures/proto2/black.shader",
    "shaders/textures/proto2/blue_zot.shader",
    "shaders/textures/proto2/blue_zot2.shader",
    "shaders/textures/proto2/bluea_dcl.shader",
    "shaders/textures/proto2/blueat_dcl.shader",
    "shaders/textures/proto2/blueflag.shader",
    "shaders/textures/proto2/blueflare.shader",
    "shaders/textures/proto2/blueflare2.shader",
    "shaders/textures/proto2/bluelight_on.shader",
    "shaders/textures/proto2/blueob.shader",
    "shaders/textures/proto2/bluetrim01.shader",
    "shaders/textures/proto2/bsbluelight_off.shader",
    "shaders/textures/proto2/bsbluelight_on.shader",
    "shaders/textures/proto2/bsredlight_off.shader",
    "shaders/textures/proto2/bsredlight_on.shader",
    "shaders/textures/proto2/c_zinc_shiny.shader",
    "shaders/textures/proto2/ceiling_pipe01.shader",
    "shaders/textures/proto2/chain.shader",
    "shaders/textures/proto2/cheapfloor.shader",
    "shaders/textures/proto2/concrete01wetfloor.shader",
    "shaders/textures/proto2/concrete01wetfloorkc.shader",
    "shaders/textures/proto2/concrete01wetwall.shader",
    "shaders/textures/proto2/concrete03c_aqua.shader",
    "shaders/textures/proto2/concrete_blue.shader",
    "shaders/textures/proto2/concrete_bluenfx.shader",
    "shaders/textures/proto2/concrete_red.shader",
    "shaders/textures/proto2/concrete_rednfx.shader",
    "shaders/textures/proto2/dirt01.shader",
    "shaders/textures/proto2/door_right.shader",
    "shaders/textures/proto2/duct01.shader",
    "shaders/textures/proto2/flare.shader",
    "shaders/textures/proto2/flare2.shader",
    "shaders/textures/proto2/floorvent01.shader",
    "shaders/textures/proto2/gear02.shader",
    "shaders/textures/proto2/girder03.shader",
    "shaders/textures/proto2/girder04.shader",
    "shaders/textures/proto2/girder05.shader",
    "shaders/textures/proto2/gothic_light.shader",
    "shaders/textures/proto2/gothic_lightfx.shader",
    "shaders/textures/proto2/grassy_0.shader",
    "shaders/textures/proto2/grassy_0to1.shader",
    "shaders/textures/proto2/grassy_0to2.shader",
    "shaders/textures/proto2/grassy_1.shader",
    "shaders/textures/proto2/grassy_1to2.shader",
    "shaders/textures/proto2/grassy_2.shader",
    "shaders/textures/proto2/grate_trim.shader",
    "shaders/textures/proto2/grill01.shader",
    "shaders/textures/proto2/grill02.shader",
    "shaders/textures/proto2/grill03b.shader",
    "shaders/textures/proto2/harvest.shader",
    "shaders/textures/proto2/jimtest_0.shader",
    "shaders/textures/proto2/jimtest_0to1.shader",
    "shaders/textures/proto2/jimtest_0to2.shader",
    "shaders/textures/proto2/jimtest_0to3.shader",
    "shaders/textures/proto2/jimtest_1.shader",
    "shaders/textures/proto2/jimtest_1to2.shader",
    "shaders/textures/proto2/jimtest_1to3.shader",
    "shaders/textures/proto2/jimtest_2.shader",
    "shaders/textures/proto2/jimtest_2to3.shader",
    "shaders/textures/proto2/jimtest_3.shader",
    "shaders/textures/proto2/light_nv.shader",
    "shaders/textures/proto2/lightbulb.shader",
    "shaders/textures/proto2/lightbulb2.shader",
    "shaders/textures/proto2/marble02b_s.shader",
    "shaders/textures/proto2/marble02btrim03.shader",
    "shaders/textures/proto2/marble02rtrim03.shader",
    "shaders/textures/proto2/marbledoor_blue.shader",
    "shaders/textures/proto2/marbledoor_red.shader",
    "shaders/textures/proto2/marbletrim01.shader",
    "shaders/textures/proto2/marbletrim02.shader",
    "shaders/textures/proto2/mirrorfloor.shader",
    "shaders/textures/proto2/mpintro.shader",
    "shaders/textures/proto2/mpteam1.shader",
    "shaders/textures/proto2/mpteam3_movie.shader",
    "shaders/textures/proto2/mpteam5_mv.shader",
    "shaders/textures/proto2/mpterra2_mv.shader",
    "shaders/textures/proto2/oneflag.shader",
    "shaders/textures/proto2/pagans_name.shader",
    "shaders/textures/proto2/pipes01.shader",
    "shaders/textures/proto2/pipewall01.shader",
    "shaders/textures/proto2/pulsebeam.shader",
    "shaders/textures/proto2/rail01.shader",
    "shaders/textures/proto2/red_zot.shader",
    "shaders/textures/proto2/red_zot2.shader",
    "shaders/textures/proto2/reda_dcl.shader",
    "shaders/textures/proto2/redflag.shader",
    "shaders/textures/proto2/redflare.shader",
    "shaders/textures/proto2/redflare2.shader",
    "shaders/textures/proto2/redlight_on.shader",
    "shaders/textures/proto2/redob.shader",
    "shaders/textures/proto2/redtrim01.shader",
    "shaders/textures/proto2/rsbluelight_off.shader",
    "shaders/textures/proto2/rsbluelight_on.shader",
    "shaders/textures/proto2/rsredlight_off.shader",
    "shaders/textures/proto2/rsredlight_on.shader",
    "shaders/textures/proto2/screw01.shader",
    "shaders/textures/proto2/shiny_black.shader",
    "shaders/textures/proto2/sign01.shader",
    "shaders/textures/proto2/skull_blue_dcl.shader",
    "shaders/textures/proto2/skull_red_dcl.shader",
    "shaders/textures/proto2/stadlight01.shader",
    "shaders/textures/proto2/steam01.shader",
    "shaders/textures/proto2/supportctfblu.shader",
    "shaders/textures/proto2/supportctfred.shader",
    "shaders/textures/proto2/teamwerkz_blue1.shader",
    "shaders/textures/proto2/teamwerkz_red1.shader",
    "shaders/textures/proto2/techtrim02.shader",
    "shaders/textures/proto2/terramap01.shader",
    "shaders/textures/proto2/tin_panel.shader",
    "shaders/textures/proto2/torchstone02_trans.shader",
    "shaders/textures/proto2/torchstone03_trans.shader",
    "shaders/textures/proto2/torchstone_trans.shader",
    "shaders/textures/proto2/tproto_0.shader",
    "shaders/textures/proto2/tproto_0to1.shader",
    "shaders/textures/proto2/tproto_1.shader",
    "shaders/textures/proto2/urhere.shader",
    "shaders/textures/proto2/v_support02.shader",
    "shaders/textures/proto2/vent01.shader",
    "shaders/textures/proto2/vertex_cavestone.shader",
    "shaders/textures/proto2/vertex_cavestone_mru.shader",
    "shaders/textures/proto2/vertex_con.shader",
    "shaders/textures/proto2/vertex_greenstone.shader",
    "shaders/textures/proto2/wheel01.shader",
    "shaders/textures/proto2/winframe.shader",
    "shaders/textures/proto2/wire.shader",
    "shaders/textures/proto2/wirepipe.shader",
    "shaders/textures/proto2/x_rocky01.shader",
    "shaders/textures/proto2/x_sandy01.shader",
    "shaders/textures/proto2/x_smallpipe.shader",
    "shaders/textures/proto2/xblueflare2.shader",
    "shaders/textures/proto2/xflag01.shader",
    "shaders/textures/proto2/xproto_0.shader",
    "shaders/textures/proto2/xproto_0to1.shader",
    "shaders/textures/proto2/xproto_0to2.shader",
    "shaders/textures/proto2/xproto_1.shader",
    "shaders/textures/proto2/xproto_1to2.shader",
    "shaders/textures/proto2/xproto_2.shader",
    "shaders/textures/proto2/xredflare2.shader",
    "shaders/textures/proto2/xrocky01.shader",
    "shaders/textures/proto2/xsandy01.shader",
    "shaders/textures/proto2/yellow.shader",
    "shaders/textures/redteam1.shader",
    "shaders/textures/screenswitch.shader",
    "shaders/textures/sfx/dclogo.shader",
    "shaders/textures/sfx/fog_mptimctf1.shader",
    "shaders/textures/sfx/spawn_floord2c_red.shader",
    "shaders/textures/sfx/teslacoil3blue.shader",
    "shaders/textures/sfx/xflame2_nolight.shader",
    "shaders/textures/sfx/xfog_1024.shader",
    "shaders/textures/sfx/xian_dm3padwall_light.shader",
    "shaders/textures/sfx2/autorain.shader",
    "shaders/textures/sfx2/b_flame1.shader",
    "shaders/textures/sfx2/b_smack01.shader",
    "shaders/textures/sfx2/beam01.shader",
    "shaders/textures/sfx2/blue_edge.shader",
    "shaders/textures/sfx2/blue_jumpad.shader",
    "shaders/textures/sfx2/blue_jumpad05.shader",
    "shaders/textures/sfx2/blue_jumpad2.shader",
    "shaders/textures/sfx2/blue_jumpad3.shader",
    "shaders/textures/sfx2/blue_jumpad6.shader",
    "shaders/textures/sfx2/blue_launchpad.shader",
    "shaders/textures/sfx2/bluegoal2.shader",
    "shaders/textures/sfx2/demonltblacknolight.shader",
    "shaders/textures/sfx2/dist_fog.shader",
    "shaders/textures/sfx2/doubler.shader",
    "shaders/textures/sfx2/drizzle.shader",
    "shaders/textures/sfx2/flame_nolit_noshad.shader",
    "shaders/textures/sfx2/flameanim_blue_lowlite.shader",
    "shaders/textures/sfx2/flameanim_red_lowlite.shader",
    "shaders/textures/sfx2/guard.shader",
    "shaders/textures/sfx2/jumpadx.shader",
    "shaders/textures/sfx2/jumportal01.shader",
    "shaders/textures/sfx2/jumportal02.shader",
    "shaders/textures/sfx2/jumppad_q1metal7_97.shader",
    "shaders/textures/sfx2/jumppad_q1metal7_98.shader",
    "shaders/textures/sfx2/kamikaze.shader",
    "shaders/textures/sfx2/mainbanner.shader",
    "shaders/textures/sfx2/menuflare.shader",
    "shaders/textures/sfx2/nebula.shader",
    "shaders/textures/sfx2/ntrl_jumpad.shader",
    "shaders/textures/sfx2/ntrl_jumpad2.shader",
    "shaders/textures/sfx2/ntrl_jumpad3.shader",
    "shaders/textures/sfx2/ntrl_launchpad.shader",
    "shaders/textures/sfx2/ouchfog.shader",
    "shaders/textures/sfx2/padwall_ntl.shader",
    "shaders/textures/sfx2/padwall_red.shader",
    "shaders/textures/sfx2/padwall_red_light.shader",
    "shaders/textures/sfx2/pagans.shader",
    "shaders/textures/sfx2/r_fight01.shader",
    "shaders/textures/sfx2/red_edge.shader",
    "shaders/textures/sfx2/red_jumpad.shader",
    "shaders/textures/sfx2/red_jumpad05.shader",
    "shaders/textures/sfx2/red_jumpad2.shader",
    "shaders/textures/sfx2/red_jumpad3.shader",
    "shaders/textures/sfx2/red_jumpad6.shader",
    "shaders/textures/sfx2/red_launchpad.shader",
    "shaders/textures/sfx2/redgoal2.shader",
    "shaders/textures/sfx2/scout.shader",
    "shaders/textures/sfx2/screen01.shader",
    "shaders/textures/sfx2/scrolling_red.shader",
    "shaders/textures/sfx2/senbouncenolit.shader",
    "shaders/textures/sfx2/swirl_b1.shader",
    "shaders/textures/sfx2/swirl_r1.shader",
    "shaders/textures/sfx2/tread2.shader",
    "shaders/textures/sfx2/ven_beam.shader",
    "shaders/textures/skies/dc_hell.shader",
    "shaders/textures/skies/gallery_sky.shader",
    "shaders/textures/skies/jimsky.shader",
    "shaders/textures/skies/mkc_ctf1.shader",
    "shaders/textures/skies/proto_sky.shader",
    "shaders/textures/skies/raster_test_sun.shader",
    "shaders/textures/skies/terrain1.shader",
    "shaders/textures/skies/tim_mpctf1.shader",
    "shaders/textures/skies/tim_tourney1.shader",
    "shaders/textures/skies/tim_tourney2.shader",
    "shaders/textures/skies/xmkc_ctf5sky.shader",
    "shaders/textures/skies/xproto_sky.shader",
    "shaders/textures/skies/xproto_sky2.shader",
    "shaders/textures/skies/xproto_sky_tourney2.shader",
    "shaders/textures/skies/xtoxicsky_newctf1.shader",
    "shaders/textures/skies2/ctf6sky.shader",
    "shaders/textures/skies2/ctf6sky_ter.shader",
    "shaders/textures/skies2/hell1.shader",
    "shaders/textures/skies2/hell2.shader",
    "shaders/textures/skies2/hell3.shader",
    "shaders/textures/skies2/mpterra2.shader",
    "shaders/textures/skies2/nebula.shader",
    "shaders/textures/skies2/nebula2.shader",
    "shaders/textures/skies2/nebula3.shader",
    "shaders/textures/skies2/nebula3halflit.shader",
    "shaders/textures/skies2/nebula3nolit.shader",
    "shaders/textures/skies2/nebulax.shader",
    "shaders/textures/skies2/x_nebula3.shader",
    "shaders/textures/skies2/xhell1_nolight.shader",
    "shaders/textures/stone/pjrock1_trans.shader",
    "shaders/textures/stone/pjrock7_trans.shader",
    "shaders/textures/stone2/pjrock4_vertex.shader",
    "shaders/textures/stone2/pjrock5_vertex.shader",
    "shaders/textures/terrain/mpterra1_0.shader",
    "shaders/textures/terrain/mpterra1_0to1.shader",
    "shaders/textures/terrain/mpterra1_0to2.shader",
    "shaders/textures/terrain/mpterra1_1.shader",
    "shaders/textures/terrain/mpterra1_1to2.shader",
    "shaders/textures/terrain/mpterra1_2.shader",
    "shaders/textures/terrain/mpterra2_0.shader",
    "shaders/textures/terrain/mpterra2_0to1.shader",
    "shaders/textures/terrain/mpterra2_0to2.shader",
    "shaders/textures/terrain/mpterra2_1.shader",
    "shaders/textures/terrain/mpterra2_1to2.shader",
    "shaders/textures/terrain/mpterra2_2.shader",
    "shaders/textures/terrain/vxmpterra1.shader",
    "shaders/textures/terrain/vxmpterra2.shader",
    "shaders/textures/terrain/vxmpterra3.shader",
    "shaders/ui/assets/clan_shader1.shader",
    "shaders/ui/assets/controls_shader1.shader",
    "shaders/ui/assets/crusaders_name.shader",
    "shaders/ui/assets/hudbar.shader",
    "shaders/ui/assets/hudbarlarge.shader",
    "shaders/ui/assets/hudbarmedium.shader",
    "shaders/ui/assets/intruders_name.shader",
    "shaders/ui/assets/logo01.shader",
    "shaders/ui/assets/mainbanner_shader1.shader",
    "shaders/ui/assets/pagans_name.shader",
    "shaders/ui/assets/pagans_shader1.shader",
    "shaders/ui/assets/pagans_shader1_2.shader",
    "shaders/ui/assets/player_shader1.shader",
    "shaders/ui/assets/stroggs_name.shader",
    "shaders/ui/assets/the_fallen_name.shader",
    "shaders/uiBackground.shader",
    "shaders/uiBackgroundMulti.shader",
    "shaders/uibackground4.shader",
    "shaders/uibackground5.shader",
    "shaders/uibackground8.shader",
    "shaders/uibackgroundid.shader",
    "shaders/vs.shader",
    "shaders/warning.shader",
]

filegroup(
    name = "material_files",
    srcs = MATERIALS,
)

genrule(
    name = "materials",
    srcs = [
        ":material_files",
        "//content/baseq3:materials",
    ],
    outs = ["scripts/teamarena.shader"],
    cmd = "echo $(locations :material_files) | sort | tr -s \" \" \"\\012\" | awk '{print \"--input-file \\\"\" $$0 \"\\\"\"}' | xargs $(execpath //tools/material_magic/java/org/realityforge/q3a/material_magic:Main) --output-file $@ --optimize --library-input-file $(location //content/baseq3:materials) --allowed-material-override console --allowed-material-override levelShotDetail --allowed-material-override models/flags/pole",
    tools = ["//tools/material_magic/java/org/realityforge/q3a/material_magic:Main"],
    visibility = ["//visibility:public"],
)

material_format_test(
    name = "teamarena",
    materials = MATERIALS,
)
