load("//build_defs:rules.bzl", "CLIENT_GAME_LINKOPTS", "DIST_VISIBILITY", "SERVER_GAME_LINKOPTS", "UI_LINKOPTS")
load("//build_defs:copy_to_directory.bzl", _copy_to_directory = "copy_to_directory")

cc_binary(
    name = "cgame.so",
    linkopts = CLIENT_GAME_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/cgame:baseq3",
    ],
)

cc_binary(
    name = "qagame.so",
    linkopts = SERVER_GAME_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/game:baseq3",
    ],
)

cc_binary(
    name = "ui.so",
    linkopts = UI_LINKOPTS,
    linkshared = 1,
    visibility = DIST_VISIBILITY,
    deps = [
        "//build_defs:exported_symbols.lds",
        "//code/q3_ui:ui",
    ],
)

_copy_to_directory(
    name = "baseq3",
    srcs = [
        "//content/baseq3:QuakeArenaArcade_baseq3_images",
        "//content/baseq3:material_assets",
        "//content/baseq3:pak9hqq36_images",
        "//content/baseq3:q3a_baseq3_pak0_images",
        "//content/baseq3:q3a_baseq3_pak2_images",
        "//content/baseq3:q3a_baseq3_pak4_images",
        "//content/baseq3:q3a_baseq3_pak6_images",
        "@QuakeArenaArcade_baseq3//:files",
        "@pak9hqq36//:files",
        "@q3a_baseq3_pak0//:files",
        "@q3a_baseq3_pak2//:files",
        "@q3a_baseq3_pak4//:files",
        "@q3a_baseq3_pak5//:files",
        "@q3a_baseq3_pak6//:files",
        "@q3a_baseq3_pak8//:files",
    ],
    downcase = True,
)

genrule(
    name = "pak0",
    srcs = [":baseq3"],
    outs = ["pak0.pk3"],
    cmd = """
export ZIPPER=`pwd`/$(location @bazel_tools//tools/zip:zipper)
export TARGET=`pwd`/$@
cd $(location :baseq3)
find .  ! -type d |  sed -e "s/^\\.\\///" | awk '{print "\\"" $$0 "\\"" }' | sort | xargs $${ZIPPER} c $${TARGET}
    """,
    tools = ["@bazel_tools//tools/zip:zipper"],
    visibility = DIST_VISIBILITY,
)
